# xpc

./: .gitignore  LICENSE.txt  README.md  callbacks.py  makefile  mwe.py  pyproject.toml  server.py  temp1.py  temp2.py  temp3.py  tox.ini
.github/workflows/: publish.yml  test-pr.yml  test.yml
app/: server.py
example/: _logging.py  call_from_connect.py  callbacks.py  multiple_servers.py  register_callback.py  register_callback_another_process.py  server.py  server_another_process.py
src/xpc/: __init__.py  xpc.py
tests/: _server_fixture.py  conftest.py  test_black_hole.py  test_example.py  test_example_server.py  test_find_free_port.py  test_license.py  test_man.py  test_man_b2b.py  test_resolve_address.py
